# image_colorizer

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.web  README.md  data_analysis.ipynb  docker-compose.dev.yml  jobscript.sh  main.py  pyproject.toml  train_filtered_vit.json  val_filtered_vit.json
app/: README.md  __init__.py  app.py  model_loader.py  run_app.sh  utils.py
notebooks/: data_analysis.ipynb  filtering.ipynb
resnet/best_model/: best_model.pth
src/: colorization_dataset.py  predict.py  predict_compare.py  quant_predict.py  quantize.py  train.py
src/api/: main.py  model_hub.py
src/configs/: resnet_config.yaml  vgg_config.yaml  vit_config.yaml
src/dataloaders/: colorization_dataset.py
src/models/: base_model.py  resnet.py  vgg.py  vit.py
src/pipelines/: base_pipeline.py  colorization_pipeline.py  resnet_pipeline.py  vgg_pipeline.py
src/utils/: colorization_utils.py  early_stopping.py  filtering_utils.py  predicting_utils.py
vgg/best_model/: best_model.pth  best_model_dynamic_int8.pth
web/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/gallery/: page.tsx
web/src/app/models/: page.tsx
web/src/app/privacy-policy/: page.tsx
web/src/app/terms-of-service/: page.tsx
web/src/components/: ChromaFlow.tsx
web/src/types/: globals.d.ts
