[project]
name = "Image_Colorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "fastapi[standard]>=0.115.12",
    "huggingface>=0.0.1",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "uvicorn>=0.34.2",
]

[tool.ruff.lint]
select = ["E", "F", "ANN", "D", "F", "I"]
ignore = ["D100", "D101","D2","D4","ANN002","ANN003", "E501", "ANN401", "D104", "I001"]
